Allow for empty bit fields and add BIT_FIELD meta type